--- a/README
+++ b/README
@@ -31,7 +31,12 @@ development:
   adapter: master_slave             # the adapter must be set to "master_slave"
   host: 10.21.34.80
   master_slave_adapter: mysql       # here's where you'll place the real database adapter name
+  disable_connection_test: true     # this will disable the connection test before use,
+                                    # can possibly improve the performance but you could also hit stale connections, default is false
+  eager_load_connections: true      # connections are lazy loaded by default, you can load gem eagerly setting this to true
   master:                           # and here's where you'll add the master database configuration
     database: talkies_development   # you shouldn't specify an "adapter" here, the
     username: root                  # value at "master_slave_adapter" is going to be used
     host: 10.21.34.82
+    adapter: postgresql             # you can use another adapter for the master connection if needed
+                                    # if you don't set it the "master_slave_adapter" property will be used
